Add day 1 materials

--- a/docs/02. The Language.ipynb
+++ b/docs/02. The Language.ipynb
@@ -157,14 +157,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "hour is less than 18\n",
+      "You are lucky!\n",
+      "Good day\n"
      ]
     }
    ],
