--- a/docs/10. Object-Oriented Programming.ipynb
+++ b/docs/10. Object-Oriented Programming.ipynb
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -451,6 +451,7 @@
     "    \n",
     "    @topping.deleter\n",
     "    def topping(self):\n",
+    "        print('deleter called!')\n",
     "        del self._topping\n",
     "\n",
     "        \n",
@@ -460,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -477,6 +478,23 @@
     "    my_pizza.topping = 'parmesan'\n",
     "except ValueError:\n",
     "    print('Invalid topping')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deleter called!\n"
+     ]
+    }
+   ],
+   "source": [
+    "del my_pizza.topping"
    ]
   },
   {
