--- a/docs/13. Concurrent execution.ipynb
+++ b/docs/13. Concurrent execution.ipynb
@@ -35,29 +35,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thread Thread-20 alive status: True\n",
-      "Total no of threads: 6\n",
-      "Thread Thread-21 alive status: True\n",
-      "Total no of threads: 7\n",
-      "Thread Thread-22 alive status: True\n",
-      "Total no of threads: 8\n",
-      "Thread Thread-23 alive status: True\n",
+      "Thread Thread-5 (func) alive status: True\n",
       "Total no of threads: 9\n",
-      "Thread Thread-24 alive status: True\n",
+      "Thread Thread-6 (func) alive status: True\n",
       "Total no of threads: 10\n",
-      "Finished execution from thread 1Finished execution from thread 2Finished execution from thread 3Finished execution from thread 4Finished execution from thread 5\n",
+      "Thread Thread-7 (func) alive status: True\n",
+      "Total no of threads: 11\n",
+      "Thread Thread-8 (func) alive status: True\n",
+      "Total no of threads: 12\n",
+      "Thread Thread-9 (func) alive status: True\n",
+      "Total no of threads: 13\n",
+      "Finished execution from thread 1Finished execution from thread 5\n",
+      "Finished execution from thread 3\n",
+      "Finished execution from thread 4\n",
+      "Finished execution from thread 2\n",
       "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Total time: 3.0086216927\n"
+      "Total time: 3.0075740814\n"
      ]
     }
    ],
@@ -261,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.1"
   }
  },
  "nbformat": 4,
